<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:padding="10dp"
    tools:context="iak.maulanaishaq.finalproject_iak.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_android_studio_pemula"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/androidquiztanya" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_1_menggunakan_bahasa_pemrograman_apakah_android_itu"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/java"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/swift"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="C#"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_2_tipe_data_apa_saja_yang_ada_di_ada_di_android_studio"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/string"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/integer"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Float"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/dolar"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_3_aplikasi_manakah_yang_bisa_digunakan_untuk_pemrograman_android"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/androidStudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/android_sudio"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/mysql"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/notepad"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_4_apa_nama_widget_dari_gambar_ini"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/button" />

        <EditText
            android:id="@+id/edt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_5_apa_nama_widget_dari_gambar_ini"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/cek" />

        <EditText
            android:id="@+id/edt_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnHasil"
            android:onClick="hasil"
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_hasil_disini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_siapakah_pencipta_android"
            android:textSize="20dp"
            android:textColor="#ffffff"/>
    </LinearLayout>
</ScrollView>
